# shinobi-forge

./: index.html  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts
.github/workflows/: build.yml
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/core/: conflicts.rs  detect.rs  installer.rs  mod.rs  mod_engine.rs  saves.rs  state.rs  types.rs
src-tauri/tests/: conflicts_test.rs  detect_test.rs  installer_test.rs  mod_engine_test.rs  saves_test.rs  state_test.rs
src/components/dashboard/: ConflictBanner.tsx  DashboardScreen.tsx  InstallButton.tsx  ModCard.tsx
src/components/layout/: Sidebar.tsx  StatusBar.tsx
src/components/saves/: BackupCard.tsx  SavesScreen.tsx
src/components/settings/: SettingsScreen.tsx
src/components/wizard/: SetupWizard.tsx  StepCheckModEngine.tsx  StepFindSekiro.tsx  StepReady.tsx
src/lib/: tauri.ts  types.ts
src/stores/: useAppStore.ts
